@@ -19,12 +19,26 @@ WrongContext::WrongContext(const std::string& aprob, const std::string& amethod,
 {
 }
 
+
+namespace
+{
+char* my_strdup(const char* str)
+{
+  size_t len = strlen(str);
+  char* x = (char*)malloc(len + 1); /* 1 for the null terminator */
+  if (!x)
+    return NULL;           /* malloc could not allocate memory */
+  memcpy(x, str, len + 1); /* copy the string into the new buffer */
+  return x;
+}
+}  // namespace
+
 const char* WrongContext::what() const throw()
 {
   std::ostringstream s;
   s << "WrongContext in Problem instance with name: '" << prob << "'" << std::endl;
   s << " in method '" << method << "' : " << precondition << std::endl;
-  return strdup(s.str().c_str());
+  return my_strdup(s.str().c_str());
 }
 
 WrongArgument::WrongArgument(const std::string& aprob, const std::string& amethod, const std::string& aarg,
@@ -41,7 +55,7 @@ const char* WrongArgument::what() const throw()
   std::ostringstream s;
   s << "WrongArgument in Problem instance with name: '" << prob << "'" << std::endl;
   s << " in method '" << method << "', argument '" << arg << "' : " << condition << std::endl;
-  return strdup(s.str().c_str());
+  return my_strdup(s.str().c_str());
 }
 
 NotImplemented::NotImplemented(const std::string& aprob, const std::string& amethod)
@@ -55,7 +69,7 @@ const char* NotImplemented::what() const throw()
   std::ostringstream s;
   s << "NotImplemented in Problem instance with name: '" << prob << "'";
   s << ", method '" << method << "'" << std::endl;
-  return strdup(s.str().c_str());
+  return my_strdup(s.str().c_str());
 }
 
 }  // end namespace ICoCo
