@@ -58,6 +58,7 @@ test_execution()
 	    then
         # PL: PATH set into quotes for WSL2 (some windows directories with spaces...)
 	env PATH="$BALTIK_ROOT/bin:${PATH}" Makeatelier.sccs NO_IHM 2 depend
+	
 	cd exec_opt
 	make PROGRAM=../../test_prog_opt #LIB=
 	#$CC -o test_prog $prog_test $includes_add $librairies_add
