@@ -22,6 +22,7 @@ fi
 #TRUST_TMP=$HOME && [ "`env | grep SUDO_`" != "" ] && TRUST_TMP=/tmp && export HOME=/tmp
 login=`basename $HOME`
 TRUST_TMPS=""
+[ "$(uname -a | grep CYGWIN)" != "" ] && TRUST_TMPS=$TRUST_TMPS" $HOME/tmp" # cygwin 
 #TRUST_TMPS=$TRUST_TMPS" $CCCWORKDIR/.tmp_TRUST" # Temporaire sur topaze CCCSCRATCHDIR plein tres vite...
 TRUST_TMPS=$TRUST_TMPS" /ccc/scratch/cont002/triocfd/triou" 		# Cas CCRT/TGCC irene
 TRUST_TMPS=$TRUST_TMPS" $CCCSCRATCHDIR" 		# Cas CCRT/TGCC
