@@ -1,3 +1,4 @@
+XX/XX/22 (TRUST)  Portability : Cygwin build on Windows is supported (but not regularly tested yet)
 XX/XX/22 (TRUST)  New keyword : Keyword "muscl_new" VEF convective scheme which really respect monotonicity contrary to "muscl" one, though at higher CPU cost for the moment: see QC_temperature_bounds_MUSCL validation sheet   
 XX/10/22 (TRUST)  New solvers : Add rocALUTION library for CPU and/or AMD GPU (need ROCm 5.x recent environment). Syntax: solveur_pression rocALUTION gcp|gmres|... { precond ... { ... } seuil ... }
 --------------------------------------------------------------------------------------------------
